# tales

./: .gitignore  README.md  app.py  evaluate.py  evaluation_notebook.ipynb  pyproject.toml  web_app.py
static/css/: style.css
tales/: agent.py  config.py  db_handler.py  document_processer.py  evaluation.py  ppt_agent.py  prompts.py  utils.py
templates/: chat.html
